rustdoc: Fix position of collapse-toggle on small screens

--- a/src/librustdoc/html/static/rustdoc.css
+++ b/src/librustdoc/html/static/rustdoc.css
@@ -1045,6 +1045,10 @@ h4 > .important-traits {
 		z-index: -1;
 		border-bottom: 1px solid;
 	}
+
+	.collapse-toggle {
+		left: -17px;
+	}
 }
 
 
